fix: use correct theme in dark mode

--- a/src/app.css
+++ b/src/app.css
@@ -8,4 +8,5 @@
 @plugin "daisyui/theme" {
 	name: 'dracula';
 	default: true;
+	prefersdark: true;
 }
